--- a/StartupCarvaan/app/src/main/res/layout/activity_privacy_policy.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_privacy_policy.xml
@@ -219,28 +219,217 @@
                                 android:textSize="15dp" />
                         </LinearLayout>
                     </LinearLayout>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/greyish"/>
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
             android:id="@+id/ruletext"
             >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="25dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="30dp"
-                android:layout_marginLeft="25dp"
-                android:text="1 .
-              tfdeyguhjiswbfgyurrrf Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum"
-                android:textSize="17sp"
+                android:layout_marginTop="5dp"
+
+                android:layout_marginLeft="50dp"
+                android:text="1. About startup shares
+
+           "
+                android:textSize="16sp"
+                android:textStyle="bold"
                 android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="5dp"
+
+                    android:layout_marginLeft="25dp"
+                    android:text="• These shares are not actual shares of that particular startup,
+but they are a true reflection of a startup. It shows its growth and success, so you can buy these shares and trade in them but you don't have any actual holding in the company.
+
+
+           "
+                    android:textSize="14sp"
+
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="5dp"
+
+                    android:layout_marginLeft="25dp"
+                    android:text="• Startup will be removed from the app when its growth reaches 100%, and after that you will be given back 100 percent profits + extra incentives.
+You can then buy actual shares of those startups with the profit you earn from this app.
+
+
+           "
+                    android:textSize="14sp"
+
+                    android:textColor="@color/black"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="25dp"
+                android:layout_marginTop="12dp"
+
+                android:layout_marginLeft="50dp"
+                android:text="2. About the share price
+
+           "
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="5dp"
+
+                    android:layout_marginLeft="25dp"
+                    android:text="• We have defined the set of rules for the price change of a share, the price of a share will solely depend upon those rules.
+
+           "
+                    android:textSize="14sp"
+
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="5dp"
+
+                    android:layout_marginLeft="25dp"
+                    android:text="• We hold the rights to maintain these rules and can change them later accordingly.When the rules will change you will be informed and you can ask for the justification.
+
+    "
+                    android:textSize="14sp"
+
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="12dp"
+
+                    android:layout_marginLeft="50dp"
+                    android:text="3.  Set of rules for startup share price.
+
+
+           "
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="5dp"
+
+                    android:layout_marginLeft="25dp"
+                    android:text="• Share price will increase if no more shares are available for buying.
+New chunk of shares will be listed down when shares available for buying become 0.
+
+           "
+                    android:textSize="14sp"
+
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="5dp"
+
+                    android:layout_marginLeft="25dp"
+                    android:text="• There will be a fixed time slot when a startup will be monitored on the bases of its work, milestones and achievement, If at the slot startup is working well then the share price increases but if startup fails to do so then share price will decrease.
+You can easily judge a startup by following its blog and achievement and then decide to invest or not.
+"
+                    android:textSize="14sp"
+
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="12dp"
+
+                    android:layout_marginLeft="50dp"
+                    android:text="4. About exchange coin rci
+
+
+
+           "
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="5dp"
+
+                    android:layout_marginLeft="25dp"
+                    android:text="• This is the app coin and you can only trade in this coin, first you have to buy these coins from rupees and then you can trade in these coins.
+
+           "
+                    android:textSize="14sp"
+
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="5dp"
+
+                    android:layout_marginLeft="25dp"
+                    android:text="• As our platform grows rci price will also rise, but rci price will solely be determined by the admin(startup carvaan team).
+You can enjoy bidding features for free through bonus coins which can be earned by watching ads.
+"
+                    android:textSize="14sp"
+
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="12dp"
+
+                    android:layout_marginLeft="50dp"
+                    android:text="5. About all the rules.
+
+
+           "
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="5dp"
+
+                    android:layout_marginLeft="25dp"
+                    android:text="•You must accept all the rules before playing and you can never claim anything on these rules.
+These rules are made under supervision and needed for safe play.
+
+           "
+                    android:textSize="14sp"
+
+                    android:textColor="@color/black"/>
+
+            </LinearLayout>
         </ScrollView>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/greyish"/>
+
 </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
