--- a/StartupCarvaan/app/src/main/res/layout/z_single_practice.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_practice.xml
@@ -36,25 +36,25 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="205dp"
                 android:background="@drawable/circularbordersolid"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
+
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
-                    android:gravity="start"
-                    android:layout_marginTop="10dp"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="15dp"
+
                     android:orientation="horizontal">
                     <de.hdodenhof.circleimageview.CircleImageView
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:id="@+id/companylogo"
-                        android:layout_marginLeft="25dp"
+                        android:layout_marginLeft="40dp"
                         android:src="@drawable/logonew"/>
                     <TextView
-                        android:layout_marginTop="10dp"
+
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:layout_marginLeft="15dp"
