--- a/StartupCarvaan/app/src/main/res/layout/dailogbuy.xml
+++ b/StartupCarvaan/app/src/main/res/layout/dailogbuy.xml
@@ -25,6 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
         <TextView
@@ -37,8 +39,9 @@
 
             android:gravity="right"
             android:text="$ 2.15"
+            android:textStyle="bold"
             android:textColor="#E8D63C"
-            android:textSize="45sp" />
+            android:textSize="50sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -49,7 +52,7 @@
 
             android:text="Per Share"
             android:textColor="#FFE8D63C"
-            android:textSize="24sp" />
+            android:textSize="26sp" />
     </LinearLayout>
 
     <TextView
@@ -101,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="22dp"
         android:backgroundTint="@color/teal_200"
 
         android:text="Buy"
