--- a/StartupCarvaan/app/src/main/res/layout/single_transaction.xml
+++ b/StartupCarvaan/app/src/main/res/layout/single_transaction.xml
@@ -16,6 +16,7 @@
           android:layout_height="wrap_content"
           android:background="@drawable/my"
           android:padding="10dp"
+          android:gravity="center_horizontal"
           android:orientation="vertical">
 
             <LinearLayout
@@ -28,46 +29,102 @@
                     android:layout_height="wrap_content"
                     android:text="Startupname"
                     android:textSize="15sp"
-                    android:textColor="#000000"
+                    android:layout_marginLeft="15dp"
+                    android:textColor="@color/blue"
                     android:textStyle="bold"
 
                     android:id="@+id/startup_name_trs"
-                    android:layout_weight="3"/>
+                 />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:gravity="right">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Quantity"
-                    android:id="@+id/quantity_trs"
-                    android:layout_weight="2"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="Price"
-                    android:id="@+id/price_trs"
-                    android:layout_weight="1"/>
+                    android:text="Bought/sold"
+                    android:textColor="@color/black"
+                    android:id="@+id/bought_sold_trs"
+                    />
+                </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+
                 android:layout_margin="5dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:hint="Bought/sold"
-                    android:id="@+id/bought_sold_trs"
-                    android:layout_weight="3"/>
+                    android:text="Quantity :"
+                    android:textSize="13dp"
+                    android:layout_marginLeft="10dp"
+
+                    android:textColor="@color/black"
+                   />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Total Amount"
+                    android:text="100"
+                    android:textColor="@color/goodgrey"
+                    android:textSize="13dp"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="7dp"
+                    android:id="@+id/quantity_trs"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Price :"
+                    android:textSize="13dp"
+                    android:layout_marginLeft="20dp"
+
+                    android:textColor="@color/black"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="100"
+                    android:layout_marginLeft="8dp"
+                    android:textColor="@color/goodgrey"
+                    android:textSize="13dp"
+                    android:textStyle="bold"
+                    android:id="@+id/price_trs"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Total amount :"
+                    android:textSize="13dp"
+                    android:layout_marginLeft="20dp"
+
+                    android:textColor="@color/black"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="100000"
                     android:id="@+id/amount_trs"
-                    android:layout_weight="2"/>
+                    android:layout_marginLeft="8dp"
+                    android:textColor="@color/goodgrey"
+                    android:textSize="13dp"
+                    android:textStyle="bold"
+
+
+                    />
             </LinearLayout>
           <Button
               android:layout_width="wrap_content"
-              android:layout_height="45dp"
+              android:layout_height="40dp"
+              android:text="Delete"
+              android:layout_marginTop="10dp"
+              android:textColor="@color/white"
+              />
 
         </LinearLayout>
 </androidx.cardview.widget.CardView>
